--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "@nestjs/swagger": "7.0.12",
     "@slynova/flydrive": "1.0.3",
     "@slynova/flydrive-s3": "1.0.3",
-    "bcryptjs": "2.4.3",
+    "bcrypt": "^5.0.1",
     "bull": "4.10.1",
     "cache-manager": "4.1.0",
     "class-transformer": "0.5.1",
@@ -78,6 +78,7 @@
     "@nestjs/testing": "10.0.4",
     "@nestjs/typeorm": "10.0.0",
     "@swc/cli": "0.1.62",
+    "@types/bcrypt": "^5.0.0",
     "@swc/core": "1.3.67",
     "@types/bcryptjs": "2.4.2",
     "@types/bull": "4.10.0",
